tests/ui/impl-trait/inference/in-defining-item/reveal-hidden-via-match-at-binding-wrapped-onw-id-left.old.stderr
error[E0308]: mismatched types
  --> $DIR/reveal-hidden-via-match-at-binding-wrapped-onw-id-left.rs:33:21
   |
LL |         x @ W(I) => x.show(),
   |                     ^^^^^^^^ expected `WIShow`, found `OnWShow`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
